"""Tink Java Apps module."""

module(
    name = "tink_java_apps",
    version = "1.12.2",
)

bazel_dep(
    name = "platforms",
    version = "0.0.10",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)
bazel_dep(
    name = "rules_java",
    version = "7.6.5",
)
bazel_dep(
    name = "rules_jvm_external",
    version = "6.3",
)

# This is needed to overwrite rules_jvm_external's toolchain to allow running with `root` as user.
bazel_dep(
    name = "rules_python",
    version = "0.33.2",
)
bazel_dep(
    name = "rules_android",
    version = "0.2.0",
)

# Overriding as per
# https://github.com/bazelbuild/rules_android/blob/eb728f67cae8392360338d07d59835db76bee2c2/README.md.
# Commit from May 22, 2024.
RULES_ANDROID_COMMIT = "b2e8bf74e84b1bb20102e44d34620d4ad9ff3dd8"

git_override(
    module_name = "rules_android",
    commit = RULES_ANDROID_COMMIT,
    remote = "https://github.com/bazelbuild/rules_android",
)

register_toolchains(
    "@rules_android//toolchains/android:android_default_toolchain",
    "@rules_android//toolchains/android_sdk:android_sdk_tools",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    ignore_root_user_error = True,
    # Only set when you have mulitple toolchain versions.
    is_default = True,
    python_version = "3.11",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "androidx.annotation:annotation:1.8.2",
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.crypto.tink:tink:1.18.0",
        "com.google.errorprone:error_prone_annotations:2.23.0",
        "com.google.http-client:google-http-client:2.0.0",
        "org.ow2.asm:asm-commons:9.7",
        "org.pantsbuild:jarjar:1.7.2",
    ],
    repositories = [
        "https://maven.google.com",  # For androidx.annotation:annotation:1.5.0.
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
