load("//:version.bzl", "TINK_APPS_VERSION_LABEL")
load("//tools:gen_maven_jar_rules.bzl", "gen_maven_jar_rules", "maven_bundle")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

gen_maven_jar_rules(
    name = "maven",
    manifest_lines = [
        "Automatic-Module-Name: com.google.crypto.tink.apps.paymentmethodtoken",
    ],
    root_packages = ["com.google.crypto.tink.apps.paymentmethodtoken"],
    deps = [
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:google_payments_public_keys_manager",
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:jwt_key_converter",
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:keys_downloader",
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:payment_method_token_constants",
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:payment_method_token_hybrid_decrypt",
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:payment_method_token_hybrid_encrypt",
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:payment_method_token_recipient",
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:payment_method_token_recipient_kem",
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:payment_method_token_recipient_key_gen",
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:payment_method_token_sender",
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:payment_method_token_util",
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:sender_intermediate_cert_factory",
    ],
)

# Note: before building this target you need to add files with the key and pin.
# See the documentation of maven_bundle for how to create these.
maven_bundle(
    name = "paymentmethodtoken-snapshot-bundle",
    gpg_pin_file = "//:gpg_test_pin.txt",
    gpg_secret_key_file = "//:gpg_test_key.asc",
    lib_name = "paymentmethodtoken",
    lib_version = "HEAD-SNAPSHOT",
    maven_jar_rules_target = ":maven",
    pom_template = "//maven:tink-java-apps-paymentmethodtoken.pom.xml",
    tags = ["manual"],
)

# Note: before building this target you need to add files with the key and pin.
# See the documentation of maven_bundle for how to create these.
maven_bundle(
    name = "paymentmethodtoken-release-bundle",
    gpg_pin_file = "//:gpg_pin.txt",
    gpg_secret_key_file = "//:gpg_key.asc",
    lib_name = "paymentmethodtoken",
    lib_version = TINK_APPS_VERSION_LABEL,
    maven_jar_rules_target = ":maven",
    pom_template = "//maven:tink-java-apps-paymentmethodtoken.pom.xml",
    tags = ["manual"],
)
