load("//tools:gen_maven_jar_rules.bzl", "gen_maven_jar_rules")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

gen_maven_jar_rules(
    name = "maven",
    manifest_lines = [
        "Automatic-Module-Name: com.google.crypto.tink.apps.rewardedads",
    ],
    root_packages = ["com.google.crypto.tink.apps.rewardedads"],
    deps = [
        "//rewardedads/src/main/java/com/google/crypto/tink/apps/rewardedads:keys_downloader",
        "//rewardedads/src/main/java/com/google/crypto/tink/apps/rewardedads:rewarded_ads_verifier",
    ],
)
