load("//tools:module_version.bzl", "get_module_version")
load("//tools:gen_maven_jar_rules.bzl", "gen_maven_jar_rules", "maven_bundle")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

gen_maven_jar_rules(
    name = "maven",
    manifest_lines = [
        "Automatic-Module-Name: com.google.crypto.tink.apps.rewardedads",
    ],
    root_packages = ["com.google.crypto.tink.apps.rewardedads"],
    deps = [
        "//rewardedads/src/main/java/com/google/crypto/tink/apps/rewardedads:keys_downloader",
        "//rewardedads/src/main/java/com/google/crypto/tink/apps/rewardedads:rewarded_ads_verifier",
    ],
)

# Note: before building this target you need to add files with the key and pin.
# See the documentation of maven_bundle for how to create these.
maven_bundle(
    name = "rewardedads-snapshot-bundle",
    gpg_pin_file = "//:gpg_test_pin.txt",
    gpg_secret_key_file = "//:gpg_test_key.asc",
    lib_name = "apps-rewardedads",
    lib_version = "HEAD-SNAPSHOT",
    maven_jar_rules_target = ":maven",
    pom_template = "//maven:tink-java-apps-rewardedads.pom.xml",
    tags = ["manual"],
)

# Note: before building this target you need to add files with the key and pin.
# See the documentation of maven_bundle for how to create these.
maven_bundle(
    name = "rewardedads-release-bundle",
    gpg_pin_file = "//:gpg_pin.txt",
    gpg_secret_key_file = "//:gpg_key.asc",
    lib_name = "apps-rewardedads",
    lib_version = get_module_version(name = "version_label_name"),
    maven_jar_rules_target = ":maven",
    pom_template = "//maven:tink-java-apps-rewardedads.pom.xml",
    tags = ["manual"],
)
