load("//:version.bzl", "TINK_APPS_VERSION_LABEL")
load("//tools:gen_maven_jar_rules.bzl", "gen_maven_jar_rules", "maven_bundle")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

gen_maven_jar_rules(
    name = "maven",
    manifest_lines = [
        "Automatic-Module-Name: com.google.crypto.tink.apps.webpush",
    ],
    root_packages = ["com.google.crypto.tink.apps.webpush"],
    deps = [
        "//webpush/src/main/java/com/google/crypto/tink/apps/webpush:web_push_constants",
        "//webpush/src/main/java/com/google/crypto/tink/apps/webpush:web_push_hybrid_decrypt",
        "//webpush/src/main/java/com/google/crypto/tink/apps/webpush:web_push_hybrid_encrypt",
        "//webpush/src/main/java/com/google/crypto/tink/apps/webpush:web_push_util",
    ],
)

# Note: before building this target you need to add files with the key and pin.
# See the documentation of maven_bundle for how to create these.
maven_bundle(
    name = "webpush-snapshot-bundle",
    gpg_pin_file = "//:gpg_test_pin.txt",
    gpg_secret_key_file = "//:gpg_test_key.asc",
    lib_name = "apps-webpush",
    lib_version = "HEAD-SNAPSHOT",
    maven_jar_rules_target = ":maven",
    pom_template = "//maven:tink-java-apps-webpush.pom.xml",
    tags = ["manual"],
)

# Note: before building this target you need to add files with the key and pin.
# See the documentation of maven_bundle for how to create these.
maven_bundle(
    name = "webpush-release-bundle",
    gpg_pin_file = "//:gpg_pin.txt",
    gpg_secret_key_file = "//:gpg_key.asc",
    lib_name = "apps-webpush",
    lib_version = TINK_APPS_VERSION_LABEL,
    maven_jar_rules_target = ":maven",
    pom_template = "//maven:tink-java-apps-webpush.pom.xml",
    tags = ["manual"],
)
