load("//tools:gen_java_test_rules.bzl", "gen_java_test_rules")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

# Tests

java_library(
    name = "generator_test",
    testonly = 1,
    srcs = glob([
        "**/*.java",
    ]),
    deps = [
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:google_payments_public_keys_manager",
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:jwt_key_converter",
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:keys_downloader",
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:payment_method_token_constants",
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:payment_method_token_hybrid_decrypt",
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:payment_method_token_hybrid_encrypt",
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:payment_method_token_recipient",
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:payment_method_token_recipient_kem",
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:payment_method_token_sender",
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:payment_method_token_util",
        "//paymentmethodtoken/src/main/java/com/google/crypto/tink/apps/paymentmethodtoken:sender_intermediate_cert_factory",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_http_client_google_http_client",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

gen_java_test_rules(
    test_files = glob(
        ["**/*Test.java"],
    ),
    deps = [
        ":generator_test",
    ],
)
