load("//tools:gen_java_test_rules.bzl", "gen_java_test_rules")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

# Tests

java_library(
    name = "generator_test",
    testonly = 1,
    srcs = glob([
        "**/*.java",
    ]),
    deps = [
        "//rewardedads/src/main/java/com/google/crypto/tink/apps/rewardedads:keys_downloader",
        "//rewardedads/src/main/java/com/google/crypto/tink/apps/rewardedads:rewarded_ads_verifier",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_http_client_google_http_client",
        "@maven//:junit_junit",
    ],
)

gen_java_test_rules(
    test_files = glob([
        "**/*Test.java",
    ]),
    deps = [
        ":generator_test",
    ],
)
