load("//tools:gen_java_test_rules.bzl", "gen_java_test_rules")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

# Tests

java_library(
    name = "generator_test",
    testonly = 1,
    srcs = glob([
        "**/*.java",
    ]),
    deps = [
        "//webpush/src/main/java/com/google/crypto/tink/apps/webpush:web_push_constants",
        "//webpush/src/main/java/com/google/crypto/tink/apps/webpush:web_push_hybrid_decrypt",
        "//webpush/src/main/java/com/google/crypto/tink/apps/webpush:web_push_hybrid_encrypt",
        "//webpush/src/main/java/com/google/crypto/tink/apps/webpush:web_push_util",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:junit_junit",
    ],
)

gen_java_test_rules(
    test_files = glob([
        "**/*Test.java",
    ]),
    deps = [
        ":generator_test",
    ],
)
