package(default_visibility = ["//visibility:public"])

licenses(["notice"])

java_library(
    name = "google_payments_public_keys_manager",
    srcs = ["GooglePaymentsPublicKeysManager.java"],
    deps = [
        ":keys_downloader",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_http_client_google_http_client",
    ],
)

java_library(
    name = "payment_method_token_hybrid_decrypt",
    srcs = ["PaymentMethodTokenHybridDecrypt.java"],
    deps = [
        ":payment_method_token_constants",
        ":payment_method_token_recipient_kem",
        ":payment_method_token_util",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_crypto_tink_tink",
    ],
)

java_library(
    name = "payment_method_token_sender",
    srcs = ["PaymentMethodTokenSender.java"],
    deps = [
        ":payment_method_token_constants",
        ":payment_method_token_hybrid_encrypt",
        ":payment_method_token_util",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)

java_library(
    name = "payment_method_token_recipient_key_gen",
    srcs = ["PaymentMethodTokenRecipientKeyGen.java"],
    deps = [
        ":payment_method_token_constants",
        "@maven//:com_google_crypto_tink_tink",
    ],
)

java_library(
    name = "payment_method_token_constants",
    srcs = ["PaymentMethodTokenConstants.java"],
    deps = [
        "@maven//:com_google_crypto_tink_tink",
    ],
)

java_library(
    name = "payment_method_token_recipient_kem",
    srcs = ["PaymentMethodTokenRecipientKem.java"],
)

java_library(
    name = "payment_method_token_hybrid_encrypt",
    srcs = ["PaymentMethodTokenHybridEncrypt.java"],
    deps = [
        ":payment_method_token_constants",
        ":payment_method_token_util",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_crypto_tink_tink",
    ],
)

java_library(
    name = "payment_method_token_recipient",
    srcs = ["PaymentMethodTokenRecipient.java"],
    deps = [
        ":google_payments_public_keys_manager",
        ":payment_method_token_constants",
        ":payment_method_token_hybrid_decrypt",
        ":payment_method_token_recipient_kem",
        ":payment_method_token_util",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)

java_library(
    name = "sender_intermediate_cert_factory",
    srcs = ["SenderIntermediateCertFactory.java"],
    deps = [
        ":payment_method_token_constants",
        ":payment_method_token_util",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)

java_library(
    name = "payment_method_token_util",
    srcs = ["PaymentMethodTokenUtil.java"],
    deps = [
        ":payment_method_token_constants",
        "@maven//:com_google_crypto_tink_tink",
    ],
)

java_library(
    name = "jwt_key_converter",
    srcs = ["JwtKeyConverter.java"],
    deps = [
        "@maven//:com_google_crypto_tink_tink",
    ],
)

java_library(
    name = "keys_downloader",
    srcs = ["KeysDownloader.java"],
    deps = [
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_http_client_google_http_client",
    ],
)
