package(default_visibility = ["//visibility:public"])

licenses(["notice"])

java_library(
    name = "rewarded_ads_verifier",
    srcs = ["RewardedAdsVerifier.java"],
    deps = [
        ":keys_downloader",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_http_client_google_http_client",
    ],
)

java_library(
    name = "keys_downloader",
    srcs = ["KeysDownloader.java"],
    deps = [
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_http_client_google_http_client",
    ],
)
