licenses(["notice"])

java_test(
    name = "KeysDownloaderTest",
    size = "small",
    srcs = ["KeysDownloaderTest.java"],
    deps = [
        "//rewardedads/src/main/java/com/google/crypto/tink/apps/rewardedads:keys_downloader",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_http_client_google_http_client",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "RewardedAdsVerifierTest",
    size = "small",
    srcs = ["RewardedAdsVerifierTest.java"],
    deps = [
        "//rewardedads/src/main/java/com/google/crypto/tink/apps/rewardedads:keys_downloader",
        "//rewardedads/src/main/java/com/google/crypto/tink/apps/rewardedads:rewarded_ads_verifier",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_http_client_google_http_client",
        "@maven//:junit_junit",
    ],
)
