licenses(["notice"])

java_test(
    name = "WebPushHybridDecryptTest",
    size = "small",
    srcs = ["WebPushHybridDecryptTest.java"],
    deps = [
        "//webpush/src/main/java/com/google/crypto/tink/apps/webpush:web_push_constants",
        "//webpush/src/main/java/com/google/crypto/tink/apps/webpush:web_push_hybrid_decrypt",
        "//webpush/src/main/java/com/google/crypto/tink/apps/webpush:web_push_hybrid_encrypt",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "WebPushHybridEncryptTest",
    size = "small",
    srcs = ["WebPushHybridEncryptTest.java"],
    deps = [
        "//webpush/src/main/java/com/google/crypto/tink/apps/webpush:web_push_constants",
        "//webpush/src/main/java/com/google/crypto/tink/apps/webpush:web_push_hybrid_decrypt",
        "//webpush/src/main/java/com/google/crypto/tink/apps/webpush:web_push_hybrid_encrypt",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:junit_junit",
    ],
)
